# realtime-voice-tutor

./: .env.example  .gitignore  Caddyfile  README.md  pyproject.toml
data/scenarios/: airport.md  meeting-people.md  phone-calls.md  restaurant.md  shopping.md  workplace.md
data/vocabulary/: a2-beginner.md  b1-intermediate.md  b2-upper.md
docs/: COMMIT_PLAN.md  PLAN.md
scripts/: download_models.py  generate_test_fixtures.py  restart-server.sh
src/voice_tutor/: asr_engine.py  config.py  data_loader.py  engines.py  llm_engine.py  mcp_tools.py  server.py  tts_engine.py  vad_engine.py
static/: index.html  resample-processor.js
tests/: test_asr_engine.py  test_data_loader.py  test_llm_engine.py  test_mcp_tools.py  test_server.py  test_tts_engine.py  test_vad_engine.py
tests/fixtures/: hello_speech_16k.npy  silence_16k.npy
