[project]
name = "realtime-voice-tutor"
version = "0.1.0"
description = "Sub-500ms local voice agent for English conversation practice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "kokoro-onnx>=0.5.0",
    "misaki>=0.9.4",
    "numpy>=2.5.1",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0",
    "silero-vad>=6.2.1",
    "uvicorn[standard]>=0.51.0",
    "websockets>=16.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_tutor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests that hit real external services (Ollama, Kokoro)",
]
